--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,151 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+body {
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  color: #fff;
+  padding-top: 36px;
+}
+
+form {
+  width: 371px;
+  margin: 0 auto;
+  display: flex;
+  gap: 8px;
+  min-height: 40px;
+  margin-bottom: 32px;
+}
+
+.gallary {
+  width: 1128px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  column-gap: 10px;
+}
+
+.gallary-item {
+  width: calc((100% - 10px * 4) / 5);
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+
+.gallary-desc-list {
+  display: flex;
+}
+
+.gallary-desc-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 100%;
+  padding: 0;
+  padding-left: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+input:hover {
+  border: 1px solid #000;
+}
+
+input:focus {
+  outline: none;
+  border: 1px solid #4e75ff;
+}
+
+input::placeholder {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.04em;
+}
+
+button {
+  width: 91px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  background: #4e75ff;
+  border: transparent;
+
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+button:hover {
+  background: #6c8cff;
+}
+
+p {
+  color: #000;
+  font-size: 10px;
+  text-align: center;
+}
+
+a {
+  flex-grow: 1;
+}
+
+img {
+  height: 174px;
+  object-fit: cover;
+}
+
+.gallary-desc-item > p:first-child {
+  font-weight: 600;
+}
+
+span {
+  margin: 0 auto;
+  width: 110px;
+}
+
+.loader {
+  font-size: 30px;
+  color: black;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
+  position: relative;
+  visibility: hidden;
+}
+.loader:after {
+  content: 'Loading';
+  position: relative;
+  z-index: 5;
+}
+.loader:before {
+  content: '';
+  height: 6px;
+  border: 1px solid;
+  border-radius: 10px;
+  width: 100%;
+  position: absolute;
+  bottom: -10px;
+  background: linear-gradient(#ff3d00 100%, transparent 0) no-repeat;
+  background-size: 0% auto;
+  animation: 10s lineGrow linear infinite;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+@keyframes lineGrow {
+  to {
+    background-size: 100% auto;
+  }
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.is-visible {
+  visibility: visible;
 }
